--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     </head>
     <body>
         <header class="header-content">
-            <img src="images/logo batman.png" alt="logo de batman">
+            <img class="img-foto"src="images/iconFoto.png" alt="logo de batman">
         </header>
         <main>
             <span class="span-content-title">
                 <h1 class="h1-page-title">CURRICULUM   VITAE    DE    BRUCE    WAYNE</h1>
             </span>
+            <menu class="menu-content">
+                <a href="#" class="a-menu">No hago nada</a>
+                <a href="sobremi.html" class="a-menu">Mas sobre mi</a>
+                <a href="#" class="a-menu">No hago nada</a>
+            </menu>
             <section>
                 <h3 class="h3-subtitle">DATOS   PERSONALES</h3>
                 <ul>
@@ -47,6 +52,9 @@
             <text>0810 - BATMAN</text>
             <img src="images/ico_instagram.png" alt="icon instagram">
             <img src="images/ico_linkedin.png" alt="icon linkedin">
+            <a href="https://github.com/DahianaBermudez/CV">
+            <img class="img-icon"src="images/iconGit.jpg" alt="icon GitHub">
+            </a>
         </footer>
     </body>
 </html>
